# lib/db/src/schema/index.ts
@@ -5,3 +5,4 @@ export * from "./roles";
 export * from "./onboarding";
 export * from "./master_data";
 export * from "./procurement";
+export * from "./notifications";
